# beatrice-client

./: Cargo.toml  README.md  about.toml  index.html  package.json
.github/workflows/: build.yml
beatrice-cilent/: package.json  tsconfig.json
beatrice-cilent/src/: App.css  jotaiAtoms.ts
beatrice-cilent/src-tauri/: Cargo.toml  tauri.conf.json
beatrice-cilent/src-tauri/src/: cpal_invoke.rs  lib.rs  main.rs
beatrice-cilent/src/components/mycomponent/: modelSelect.tsx  voiceSettings.tsx
beatrice-cilent/src/components/ui/: button.tsx  select.tsx  slider.tsx  tooltip.tsx
beatrice-client/: package.json
beatrice-client/src/: App.tsx  rustInvoke.ts  tauriStore.ts
beatrice-client/src-tauri/: Cargo.toml  tauri.conf.json
beatrice-client/src-tauri/icons/: icon.icns
beatrice-client/src-tauri/src/: beatrice_invoke.rs  cpal_invoke.rs
beatrice-client/src/components/mycomponent/: modelSelect.tsx
beatrice-client/src/components/ui/: accordion.tsx
beatrice_lib/: Cargo.toml  build.rs  deny.toml
beatrice_lib/src/: beatrice.rs  beatrice_beta_0.rs  beatrice_beta_1.rs  beatrice_rc_0.rs  beatrice_toml.rs  bindings.rs  errors.rs  lib.rs  resampler.rs  resamplers.rs
src/: App.css  App.tsx  atoms.ts  card.tsx  rustInvoke.ts  tauriStore.ts
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: beatrice.rs  beatrice_invoke.rs  cpal.rs  cpal_invoke.rs  lib.rs  main.rs  other_invoke.rs
src/components/: card.tsx  controllers.tsx
src/components/controllers/: devices.tsx  sliders.tsx  speaker.tsx
