[package]
name = "beatrice_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
rubato = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
reqwest = { version = "0.13.1", features = ["blocking"] }
