[package]
name = "beatrice-client"
version = "0.1.0"
description = "A Tauri App"
edition = "2021"
publish = false

[lib]
name = "beatrice_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
beatrice_lib = { workspace = true }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15.3"
anyhow = "1.0.97"
ringbuf = "0.4.8"
base64 = "0.22.1"
toml = "0.8.20"
